python_sources = [
    '__init__.py',
    'back_terp.py',
    'calc_plot_range.py',
    'contour_supt.py',
    'density_at_mr.py',
    'goldSearch.py',
    'InterpProp_scipy.py',
    'mr_peak_at_eps_pc.py',
    'mr_t_limits.py',
    'rho_isp_plot_obj.py',
    'run_cea_w_error_corr.py',
    'veh_stage_obj.py',
]

py.install_sources(
  python_sources,
  pure: false,
  subdir: 'rocketcea/biprop_utils'
)
