python_sources = [
    'adjust_ch4_t.py',
    'ambient_Cf.py',
    'amm_dissociation.py',
    'basic_chart.py',
    'cea_compare2.py',
    'cea_compare3.py',
    'cea_compare_mono.py',
    'cea_compareRhoIsp.py',
    'cea_cstar_plot.py',
    'cea_plot.py',
    'chk_cea_addpropellant.py',
    'chk_cea_addpropellant_user.py',
    'chk_cea_debug.py',
    'chk_cea_long_name.py',
    'chk_cea_temp_workingdir.py',
    'chk_cea_w_units_workingdir.py',
    'chk_froz_mass_frac.py',
    'chk_froz_mole_frac.py',
    'chk_mass_frac.py',
    'chk_mass_mole.py',
    'chk_mf_prezero.py',
    'chk_mole_frac.py',
    'compare_rayleigh.py',
    'const_mass_frac2.py',
    'const_mass_frac.py',
    'delta_stg3_dv.py',
    'delta_stg3_vol.py',
    'deltav_calc.py',
    'DivertVeh.py',
    'est_pinj_over_pcomb.py',
    'find_mr_temperature_range.py',
    'full_output_fac_CR.py',
    'full_output_mono.py',
    'full_output_multiparam.py',
    'full_output_Pcinj.py',
    'full_output.py',
    'get_transport.py',
    'IspAmb_plot.py',
    'lox_gox_compare.py',
    'make_single_card.py',
    'match_nasa_rp1.py',
    'mono_peroxide.py',
    'new_propellants_2.py',
    'new_propellants.py',
    'perf_table.py',
    'perox_eq_frz.py',
    'Pexit.py',
    'plot_biprop.py',
    'plot_rayleigh.py',
    'plot_SI_biprop.py',
    'quick_chk.py',
    'Reynolds_Number.py',
    'rho_veh_1.py',
    'rho_veh_2.py',
    'rho_veh_LOXLH2.py',
    'rho_veh_stg1_dv.py',
    'rho_veh_stg1_glow.py',
    'rho_veh_stg1_vol.py',
    'rho_veh_stg3_dv.py',
    'rho_veh_stg3_glow.py',
    'rho_veh_stg3_vol.py',
    'short_output.py',
    'short_output_w_transp.py',
    'show_amb_mode.py',
    'show_X_mono.py',
    'xl_nozsep.py',
]

py.install_sources(
  python_sources,
  pure: false,
  subdir: 'rocketcea/examples'
)
